--- a/Google.GoogleCloudMessaging/externals/Podfile
+++ b/Google.GoogleCloudMessaging/externals/Podfile
@@ -3,4 +3,5 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '7.0'
 pod 'GoogleCloudMessaging', '1.1.2'
+pod 'Google/CloudMessaging', '2.0.3'
 
