[google-ios][mobileads] Updated to version 7.7.1 - Added some events to some classes - Fixed path to static library in .targets file

--- a/Google.MobileAds/externals/Podfile
+++ b/Google.MobileAds/externals/Podfile
@@ -5,5 +5,5 @@ xcodeproj 'FieldExporter/GADFieldExporter.xcodeproj'
 platform :ios, '6.0'
 
 target 'GADFieldExporter' do
-  pod 'Google-Mobile-Ads-SDK', '7.6.0'
+  pod 'GoogleMobileAds', '7.7.1'
 end
