--- a/Google.SignIn/source/Google.SignIn/Google.SignIn.csproj
+++ b/Google.SignIn/source/Google.SignIn/Google.SignIn.csproj
@@ -39,21 +39,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="libOpenInChrome.linkwith.cs">
-      <DependentUpon>libOpenInChrome.a</DependentUpon>
+    <Compile Include="libOpenInChrome_external.linkwith.cs">
+      <DependentUpon>libOpenInChrome_external.a</DependentUpon>
     </Compile>
-    <Compile Include="libGTMOAuth2_external.linkwith.cs">
-      <DependentUpon>libGTMOAuth2_external.a</DependentUpon>
+    <Compile Include="libGTMOAuth2_external_external.linkwith.cs">
+      <DependentUpon>libGTMOAuth2_external_external.a</DependentUpon>
     </Compile>
-    <Compile Include="libGTMOAuth2_internal.linkwith.cs">
-      <DependentUpon>libGTMOAuth2_internal.a</DependentUpon>
+    <Compile Include="libGTMOAuth2_internal_external.linkwith.cs">
+      <DependentUpon>libGTMOAuth2_internal_external.a</DependentUpon>
     </Compile>
     <Compile Include="Loader.cs" />
-    <Compile Include="libSignIn.linkwith.cs">
-      <DependentUpon>libSignIn.a</DependentUpon>
+    <Compile Include="libSignIn_external.linkwith.cs">
+      <DependentUpon>libSignIn_external.a</DependentUpon>
     </Compile>
-    <Compile Include="libGIPNSURL+FIFE.linkwith.cs">
-      <DependentUpon>libGIPNSURL+FIFE.a</DependentUpon>
+    <Compile Include="libGIPNSURL+FIFE_external.linkwith.cs">
+      <DependentUpon>libGIPNSURL+FIFE_external.a</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
