--- a/Google.Analytics/source/Google.Analytics/Google.Analytics.targets
+++ b/Google.Analytics/source/Google.Analytics/Google.Analytics.targets
@@ -2,7 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
 	<PropertyGroup>
-		<_GoogleMapsAssemblyName>Google.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMapsAssemblyName>
+		<_GoogleAnalyticsAssemblyName>Google.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleAnalyticsAssemblyName>
 		<_GoogleAnalyticsItemsFolder>GAnlytcs-3.14</_GoogleAnalyticsItemsFolder>
 	</PropertyGroup>
 
@@ -19,7 +19,7 @@
 
 			<RestoreAssemblyResource Include="$(XamarinBuildDownloadDir)$(_GoogleAnalyticsItemsFolder)\Libraries\libGoogleAnalytics.a">
 				<LogicalName>libGoogleAnalytics.a</LogicalName>
-				<AssemblyName>$(_GoogleMapsAssemblyName)</AssemblyName>
+				<AssemblyName>$(_GoogleAnalyticsAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 
 		</ItemGroup>
