[Pod] Updated Podfiles and Makefiles to support Pod v1.0.0

--- a/Google.Analytics/externals/Podfile
+++ b/Google.Analytics/externals/Podfile
@@ -2,6 +2,7 @@ workspace 'GAIFieldExporter'
 xcodeproj 'FieldExporter/GAIFieldExporter.xcodeproj'
 
 platform :ios, '5.0'
+install! 'cocoapods'
 
 target 'GAIFieldExporter' do
   pod 'GoogleAnalytics', '3.14.0'
