--- a/Google.AppIndexing/externals/Podfile
+++ b/Google.AppIndexing/externals/Podfile
@@ -2,5 +2,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '7.0'
+install! 'cocoapods', :integrate_targets => false
+
 pod 'GoogleAppIndexing', '2.0.3'
 
