--- a/Google.AppInvite/externals/Podfile
+++ b/Google.AppInvite/externals/Podfile
@@ -2,6 +2,8 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '7.0'
+install! 'cocoapods', :integrate_targets => false
+
 pod 'AppInvites', '1.0.2'
 pod 'Google/AppInvite', '1.1.0'
 
