--- a/Google.Cast/externals/Podfile
+++ b/Google.Cast/externals/Podfile
@@ -1,5 +1,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '6.0'
+install! 'cocoapods', :integrate_targets => false
+
 pod 'google-cast-sdk', '2.10.4'
 
