--- a/Google.GoogleCloudMessaging/externals/Podfile
+++ b/Google.GoogleCloudMessaging/externals/Podfile
@@ -2,6 +2,8 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '7.0'
+install! 'cocoapods', :integrate_targets => false
+
 pod 'GoogleCloudMessaging', '1.1.2'
 pod 'Google/CloudMessaging', '2.0.3'
 
