--- a/Google.Maps/externals/Podfile
+++ b/Google.Maps/externals/Podfile
@@ -1,4 +1,6 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '7.0'
+install! 'cocoapods', :integrate_targets => false
+
 pod 'GoogleMaps', '1.13.1'
