--- a/Google.Analytics/nuget/Xamarin.Google.iOS.Analytics.nuspec
+++ b/Google.Analytics/nuget/Xamarin.Google.iOS.Analytics.nuspec
@@ -17,9 +17,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="output/Google.Analytics.dll" target="lib\Xamarin.iOS10" />
+    <file src="output/Google.Analytics.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.Analytics/Google.Analytics.targets" target="build\Xamarin.Google.iOS.Analytics.targets"  />
+    <file src="source/Google.Analytics/Google.Analytics.targets" target="build/Xamarin.Google.iOS.Analytics.targets"  />
   </files>
 </package>
