--- a/Google.AppInvite/nuget/Xamarin.Google.iOS.AppInvite.nuspec
+++ b/Google.AppInvite/nuget/Xamarin.Google.iOS.AppInvite.nuspec
@@ -19,9 +19,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="output/Google.AppInvite.dll" target="lib\Xamarin.iOS10" />
+    <file src="output/Google.AppInvite.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.AppInvite/Google.AppInvite.targets" target="build\Xamarin.Google.iOS.AppInvite.targets"  />
+    <file src="source/Google.AppInvite/Google.AppInvite.targets" target="build/Xamarin.Google.iOS.AppInvite.targets"  />
   </files>
 </package>
