--- a/Google.Cast/nuget/Xamarin.Google.iOS.Cast.nuspec
+++ b/Google.Cast/nuget/Xamarin.Google.iOS.Cast.nuspec
@@ -17,9 +17,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="output/Google.Cast.dll" target="lib\Xamarin.iOS10" />
+    <file src="output/Google.Cast.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.Cast/Google.Cast.targets" target="build\Xamarin.Google.iOS.Cast.targets"  />
+    <file src="source/Google.Cast/Google.Cast.targets" target="build/Xamarin.Google.iOS.Cast.targets"  />
   </files>
 </package>
