--- a/Google.GoogleCloudMessaging/nuget/Xamarin.Google.iOS.GoogleCloudMessaging.nuspec
+++ b/Google.GoogleCloudMessaging/nuget/Xamarin.Google.iOS.GoogleCloudMessaging.nuspec
@@ -19,9 +19,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="output/Google.GoogleCloudMessaging.dll" target="lib\Xamarin.iOS10" />
+    <file src="output/Google.GoogleCloudMessaging.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.GoogleCloudMessaging/Google.GoogleCloudMessaging.targets" target="build\Xamarin.Google.iOS.GoogleCloudMessaging.targets"  />
+    <file src="source/Google.GoogleCloudMessaging/Google.GoogleCloudMessaging.targets" target="build/Xamarin.Google.iOS.GoogleCloudMessaging.targets"  />
   </files>
 </package>
