--- a/Google.InstanceID/nuget/Xamarin.Google.iOS.InstanceID.nuspec
+++ b/Google.InstanceID/nuget/Xamarin.Google.iOS.InstanceID.nuspec
@@ -18,9 +18,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="output/Google.InstanceID.dll" target="lib\Xamarin.iOS10" />
+    <file src="output/Google.InstanceID.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.InstanceID/Google.InstanceID.targets" target="build\Xamarin.Google.iOS.InstanceID.targets"  />
+    <file src="source/Google.InstanceID/Google.InstanceID.targets" target="build/Xamarin.Google.iOS.InstanceID.targets"  />
   </files>
 </package>
