--- a/Google.MobileAds/nuget/Xamarin.Google.iOS.MobileAds.nuspec
+++ b/Google.MobileAds/nuget/Xamarin.Google.iOS.MobileAds.nuspec
@@ -17,9 +17,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="output/Google.MobileAds.dll" target="lib\Xamarin.iOS10" />
+    <file src="output/Google.MobileAds.dll" target="lib/Xamarin.iOS10" />
 
     <!-- Add targets file for external native reference download -->
-    <file src="source/Google.MobileAds/Google.MobileAds.targets" target="build\Xamarin.Google.iOS.MobileAds.targets"  />
+    <file src="source/Google.MobileAds/Google.MobileAds.targets" target="build/Xamarin.Google.iOS.MobileAds.targets"  />
   </files>
 </package>
