[Pod] Fixed Podfiles, added targets to Podfiles

--- a/Google.AppIndexing/externals/Podfile
+++ b/Google.AppIndexing/externals/Podfile
@@ -4,5 +4,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
-pod 'GoogleAppIndexing', '2.0.3'
-
+target 'GoogleAppIndexing' do
+	pod 'GoogleAppIndexing', '2.0.3'
+end
