--- a/Google.Maps/externals/Podfile
+++ b/Google.Maps/externals/Podfile
@@ -3,4 +3,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
-pod 'GoogleMaps', '1.13.1'
+target 'GoogleMaps' do
+	pod 'GoogleMaps', '1.13.1'
+end
