--- a/Google.AppInvite/externals/Podfile
+++ b/Google.AppInvite/externals/Podfile
@@ -4,6 +4,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
-pod 'AppInvites', '1.0.2'
-pod 'Google/AppInvite', '1.1.0'
-
+target 'GoogleAppInvite' do
+	pod 'AppInvites', '1.0.2'
+	pod 'Google/AppInvite', '1.1.0'
+end
