--- a/Google.Cast/externals/Podfile
+++ b/Google.Cast/externals/Podfile
@@ -3,5 +3,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '6.0'
 install! 'cocoapods', :integrate_targets => false
 
-pod 'google-cast-sdk', '2.10.4'
-
+target 'GoogleCast' do
+	pod 'google-cast-sdk', '2.10.4'
+end
