--- a/Google.SignIn/externals/Podfile
+++ b/Google.SignIn/externals/Podfile
@@ -3,5 +3,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
-pod 'GoogleSignIn',  '3.0.0'
-
+target 'GoogleSignIn' do
+	pod 'GoogleSignIn',  '3.0.0'
+end
