--- a/Google.Analytics/externals/Podfile
+++ b/Google.Analytics/externals/Podfile
@@ -1,6 +1,8 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
+platform :ios, '5.0'
 install! 'cocoapods', :integrate_targets => false
 
-platform :ios, '5.0'
-pod 'GoogleAnalytics', '3.14.0'
+target 'GoogleAnalytics' do
+	pod 'GoogleAnalytics', '3.14.0'
+end
