[google][core] Updated to version 3.0.3 - Now Google.Core depends on Firebase.Analytics

--- a/Google.Core/source/Google.Core/Google.Core.csproj
+++ b/Google.Core/source/Google.Core/Google.Core.csproj
@@ -43,69 +43,6 @@
       <DependentUpon>libGGLCore.a</DependentUpon>
     </Compile>
     <Compile Include="Loader.cs" />
-    <Compile Include="libGSDK_Overload_external.linkwith.cs">
-      <DependentUpon>libGSDK_Overload_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_AddressBook_external.linkwith.cs">
-      <DependentUpon>libGTM_AddressBook_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_core_external.linkwith.cs">
-      <DependentUpon>libGTM_core_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_DebugUtils_external.linkwith.cs">
-      <DependentUpon>libGTM_DebugUtils_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_GTMURLBuilder_external.linkwith.cs">
-      <DependentUpon>libGTM_GTMURLBuilder_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_iPhone_external.linkwith.cs">
-      <DependentUpon>libGTM_iPhone_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_KVO_external.linkwith.cs">
-      <DependentUpon>libGTM_KVO_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_NSData+zlib.linkwith.cs">
-      <DependentUpon>libGTM_NSData+zlib.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_NSDictionary+URLArguments_external.linkwith.cs">
-      <DependentUpon>libGTM_NSDictionary+URLArguments_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_NSScannerJSON_external.linkwith.cs">
-      <DependentUpon>libGTM_NSScannerJSON_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_NSStringHTML_external.linkwith.cs">
-      <DependentUpon>libGTM_NSStringHTML_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_NSStringXML_external.linkwith.cs">
-      <DependentUpon>libGTM_NSStringXML_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_Regex_external.linkwith.cs">
-      <DependentUpon>libGTM_Regex_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_RoundedRectPath_external.linkwith.cs">
-      <DependentUpon>libGTM_RoundedRectPath_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_StringEncoding_external.linkwith.cs">
-      <DependentUpon>libGTM_StringEncoding_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_SystemVersion_external.linkwith.cs">
-      <DependentUpon>libGTM_SystemVersion_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTM_UIFont+LineHeight_external.linkwith.cs">
-      <DependentUpon>libGTM_UIFont+LineHeight_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTMSessionFetcher_core_external.linkwith.cs">
-      <DependentUpon>libGTMSessionFetcher_core_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTMSessionFetcher_full_external.linkwith.cs">
-      <DependentUpon>libGTMSessionFetcher_full_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTMStackTrace_external.linkwith.cs">
-      <DependentUpon>libGTMStackTrace_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libProtocolBuffers_external.linkwith.cs">
-      <DependentUpon>libProtocolBuffers_external.a</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
@@ -116,5 +53,15 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
   <ItemGroup>
     <None Include="Google.Core.targets" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
+      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
+      <Name>Firebase.Analytics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
+      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
+      <Name>Firebase.InstanceID</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
