--- a/Google.Core/externals/Podfile
+++ b/Google.Core/externals/Podfile
@@ -1,3 +1,31 @@
+=begin
+Last run Google/Core installed:
+- FirebaseAnalytics (3.2.1)
+- FirebaseInstanceID (1.0.7)
+- Google (3.0.3)
+- GoogleInterchangeUtilities (1.2.1)
+- GoogleSymbolUtilities (1.1.1)
+- GoogleUtilities (1.3.1)
+
+Check if main version or subversion number has changed. 
+If yes, please, update *.targets files located in binding 
+projects, also, update Podfile files if needed.
+
+In .targets file, located in Google.Core binding, you can find:
+- Google (3.0.3)
+
+In .targets file, located in Google.MobileAds binding, you can find:
+- Google-Mobile-Ads-SDK (7.8.1)
+
+In .targets file, located in Firebase.Analytics binding, you can find:
+- FirebaseAnalytics (3.2.1)
+- GoogleInterchangeUtilities (1.2.1)
+- GoogleSymbolUtilities (1.1.1)
+- GoogleUtilities (1.3.1)
+
+In .targets file, located in Firebase.InstanceID binding, you can find:
+- FirebaseInstanceID (1.0.7)
+=end
 
 source 'https://github.com/CocoaPods/Specs.git'
 
@@ -5,6 +33,5 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'GoogleCore' do
-	pod 'Google/Core', '2.0.4'
-	pod 'GoogleInterchangeUtilities', '1.2.0'
+	pod 'Google/Core', '3.0.3'
 end
