[google][firebase][core] Fixed some stuff in G.Core, F.Analytics and F.AdMob - Globalizing syntax of .targets files - Added a missing framework in F.Analytics - Added missing G.Analytics and G.SignIn extension frameworks to G.Core

--- a/Google.Core/source/Google.Core/Google.Core.targets
+++ b/Google.Core/source/Google.Core/Google.Core.targets
@@ -12,14 +12,25 @@
 		<XamarinBuildRestoreResources Include="_GoogleCoreItems" />
 	</ItemGroup>
 	<Target Name="_GoogleCoreItems">
+
 		<PropertyGroup>
 			<_GoogleCoreSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleCoreItemsFolder)\Frameworks\</_GoogleCoreSDKBaseFolder>
 		</PropertyGroup>
+
 		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_GoogleCoreSDKBaseFolder)\GGLCore.framework\GGLCore">
+			<RestoreAssemblyResource Include="$(_GoogleCoreSDKBaseFolder)GGLCore.framework\GGLCore">
+				<LogicalName>GGLCore</LogicalName>
+				<AssemblyName>$(_GoogleCoreAssemblyName)</AssemblyName>
+			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleCoreSDKBaseFolder)GGLAnalytics.framework\GGLAnalytics">
+				<LogicalName>GGLAnalytics</LogicalName>
+				<AssemblyName>$(_GoogleCoreAssemblyName)</AssemblyName>
+			</RestoreAssemblyResource>
+			<RestoreAssemblyResource Include="$(_GoogleCoreSDKBaseFolder)GGLSignIn.framework\GGLSignIn">
 				<LogicalName>GGLCore</LogicalName>
 				<AssemblyName>$(_GoogleCoreAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
 		</ItemGroup>
+		
 	</Target>
 </Project>
