--- a/Google.Core/source/Google.Core/Google.Core.csproj
+++ b/Google.Core/source/Google.Core/Google.Core.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="libGGLCore.linkwith.cs">
+    <Compile Include="GGLCore.linkwith.cs">
       <DependentUpon>libGGLCore.a</DependentUpon>
     </Compile>
     <Compile Include="Loader.cs" />
