--- a/Google.SignIn/source/Google.SignIn/Google.SignIn.csproj
+++ b/Google.SignIn/source/Google.SignIn/Google.SignIn.csproj
@@ -39,21 +39,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="libOpenInChrome_external.linkwith.cs">
-      <DependentUpon>libOpenInChrome_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTMOAuth2_external_external.linkwith.cs">
-      <DependentUpon>libGTMOAuth2_external_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGTMOAuth2_internal_external.linkwith.cs">
-      <DependentUpon>libGTMOAuth2_internal_external.a</DependentUpon>
-    </Compile>
     <Compile Include="Loader.cs" />
-    <Compile Include="libSignIn_external.linkwith.cs">
+    <Compile Include="GoogleSignIn.linkwith.cs">
       <DependentUpon>libSignIn_external.a</DependentUpon>
-    </Compile>
-    <Compile Include="libGIPNSURL+FIFE_external.linkwith.cs">
-      <DependentUpon>libGIPNSURL+FIFE_external.a</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +55,14 @@
     <ProjectReference Include="..\..\..\Google.Core\source\Google.Core\Google.Core.csproj">
       <Project>{C2355333-621E-4439-9F53-EB717D681699}</Project>
       <Name>Google.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
+      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
+      <Name>Firebase.InstanceID</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
+      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
+      <Name>Firebase.Analytics</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
