[google][mobileads] Updated to version 7.8.1

--- a/Google.MobileAds/externals/Podfile
+++ b/Google.MobileAds/externals/Podfile
@@ -3,6 +3,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '6.0'
 install! 'cocoapods', :integrate_targets => false
 
-target 'GoogleMobileAds' do
-  pod 'GoogleMobileAds', '7.7.1'
+target 'Google-Mobile-Ads-SDK' do
+  pod 'Google-Mobile-Ads-SDK', '7.8.1'
 end
